# zom

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  config.toml
.cargo/: config.toml
src/: config.rs  main.rs  mirror.rs  model.rs  utils.rs
src/prune/: extensions.rs  mod.rs  opts.rs  release.rs
src/serve/: mod.rs  opts.rs  state.rs
src/serve/handlers/: changelogs.rs  extensions.rs  mod.rs  release.rs  static_files.rs  version.rs
src/serve/static/: index.html  style.css
src/sync/: changelog.rs  extensions.rs  mod.rs  opts.rs  release.rs  static_files.rs
