[package]
name = "zom"
authors = [
    "Corentin Liaud <corentin.liaud@synacktiv.com>",
    "Thomas Halipré <thomas.halipre@synacktiv.com>"
]
version = "0.1.0"
edition = "2024"
description = "Zed offline mirror."
readme = "README.md"
license = "MIT"
keywords = ["zed", "mirror"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.55", features = ["env", "derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
fuzzy-matcher = "0.3.7"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["query", "stream"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
tokio-util = "0.7.18"
toml = "0.9.11"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
name = "custom-zom"
section = "net"
assets = [
    "$auto",
    ["config.toml", "usr/share/zom/config.sample.toml", "644"]
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
